--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -15,7 +15,27 @@ eureka.client.service-url.defaultZone=http://localhost:1234/eureka/
 zuul.routes.lb.path=/lb/**
 zuul.routes.lb.serviceId=feign-consumer
 
-zuul.ignored-services= index-service
+# 排除不需要路由的服务
+zuul.ignored-services= index-service 
+
+# 路由前缀:  如果app-name 中有"."时该配置会错误
+#zuul.prefix=/v1
+#zuul.strip-prefix=true
+
+# 本地跳转
+zuul.routes.proxy.path=/proxy/**
+zuul.routes.proxy.url=http://www.keepalived.org/
+
+#zuul.routes.fw.path=/fw/**
+#zuul.routes.fw.url=forward:/local
+
+# 转发服务端地址
+#zuul.add-host-header=true
+#zuul.add-proxy-headers=true
+
+
+
+
 
 
 
