增加 springcloud admin.

--- a/eureka/eureka-client/pom.xml
+++ b/eureka/eureka-client/pom.xml
@@ -30,6 +30,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+		<!-- jmx-bean management -->
+		<dependency>
+			<groupId>org.jolokia</groupId>
+			<artifactId>jolokia-core</artifactId>
+		</dependency>
         <!-- 监控-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
