--- a/eureka/eureka-server/pom.xml
+++ b/eureka/eureka-server/pom.xml
@@ -30,7 +30,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 		</dependency>
-
+		<!-- eureka with springcloud-dashboard -->
+		<dependency>
+			<groupId>com.github.vanroy</groupId>
+			<artifactId>spring-cloud-dashboard</artifactId>
+			<version>1.2.0.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
