--- a/ribbon-consumer-hystrix/src/main/resources/application.yaml
+++ b/ribbon-consumer-hystrix/src/main/resources/application.yaml
@@ -10,6 +10,11 @@ spring:
     encoding:
       charset: utf-8
       force: true
+  boot:
+    admin:
+       routes:
+          endpoints:  env,metrics,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream
+
   mvc:
     favicon:
       enabled: false #关闭log
@@ -22,3 +27,6 @@ eureka:
   client:
     serviceUrl:
           defaultZone: http://localhost:1234/eureka/
+management:
+  security:
+    enabled: false
