add httpClient gzip

--- a/ribbon-consumer-hystrix/src/main/resources/application-prod.properties
+++ b/ribbon-consumer-hystrix/src/main/resources/application-prod.properties
@@ -1,3 +1,11 @@
 server.port=8000
 #server.context-path=/index
 # debug=true
+
+
+feign.compression.request.enabled=true
+feign.compression.response.enabled=true
+#Ä¬ÈÏÅäÖÃ
+feign.compression.request.mine-types=text/xml,application/xml,application/json?
+#Ä¬ÈÏÅäÖÃ
+feign.compression.request.min-request-size=2048
