eureka DIY healthcheck.

--- a/eureka/eureka-client/src/main/resources/application.yaml
+++ b/eureka/eureka-client/src/main/resources/application.yaml
@@ -28,7 +28,7 @@ eureka:
     serviceUrl:
           defaultZone: http://localhost:1234/eureka/
     healthcheck:
-          enabled: false #通过 /health 检测client的可用性
+          enabled: true #通过 /health 检测client的可用性
     registry-fetch-interval-seconds: 10
 management:
   security:
